SKIT OCH MATRISER

--- a/GA - Neural Network.csproj
+++ b/GA - Neural Network.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Layer.cs" />
+    <Compile Include="Classes\Matrix.cs" />
     <Compile Include="Classes\Network.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
